--- a/angular.json
+++ b/angular.json
@@ -171,6 +171,7 @@
     }
   },
   "cli": {
+    "analytics": "87c5c1ac-ad69-4a8b-954b-c3554c41ea87",
     "defaultCollection": "@ionic/angular-toolkit"
   },
   "schematics": {
